--- a/client/bajaj_community/android/app/src/main/res/values/strings.xml
+++ b/client/bajaj_community/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">bajaj_community</string>
+    <string name="app_name">Bajaj_Finserv_Community</string>
 </resources>
